# ssd_simulator

./: .gitignore  CMakeLists.txt  README.md  auto_sim.sh  ftl.cpp  ftl.h  ftl.hpp  log_32mb_1_th-1_type1.txt  log_32mb_1_th-1_type2_win5.txt  main.cpp  result_128mb_randrw_cpu0-1_th-1_type2_win20.txt  test.cpp
